add icon to ico folder

--- a/flask/app/templates/stockmenu.html
+++ b/flask/app/templates/stockmenu.html
@@ -14,9 +14,9 @@
             <h1>Stock Menu</h1>
         </div>
         <div class="column card">
-           	<button type="button" class="nav-box" onclick="navigateTo('{{ url_for('catagory') }}')">
+           	<button type="button" class="nav-box" onclick="navigateTo('{{ url_for('category') }}')">
                 <span>Category</span>
-                <img src="../static/ico/catagory.png" class="category-icon">
+                <img src="../static/ico/category.png" class="category-icon">
            	</button>
            	<button type="button" class="nav-box" onclick="navigateTo('{{ url_for('newstock') }}')">
                 <span>New Stock</span>
