--- a/flask/app/templates/category.html
+++ b/flask/app/templates/category.html
@@ -8,13 +8,13 @@
 
 <body>
 <div class="row">
-    <a href="{{ url_for('homepage') }}"> <img src="../static/ico/reply.png" class="reply-icon"></a>
+    <a href="{{ url_for('stockmenu') }}"> <img src="../static/ico/reply.png" class="reply-icon"></a>
     <div class="column">
-        <img src="">
+        <img src="/static/ico/category.png">
         <h3>Category</h3>
     </div>
     <div class="column">
-        <img src="">
+        <img src="/static/ico/cart.png">
         <p>Waiting list</p>
     </div>
 </div>
@@ -49,7 +49,7 @@
     function showCategory(admin,category){
         category.forEach(
             function(cte_list) {
-                let show = `<div class="category-box" data-id="${cte_list.categoryID}">
+                let show = `<div class="category-box" data-id="${cte_list.cateID}">
                     <div style= "display : flex ;">
                        
                     </div>
