fix db but still broken

--- a/flask/app/templates/newstock.html
+++ b/flask/app/templates/newstock.html
@@ -7,6 +7,11 @@
 </head>
 
 <body>
-<h1>NS page</h1>
+    <div>
+        <a href="{{ url_for('stockmenu') }}"> <img src="../static/ico/reply.png" class="reply-icon"></a>
+        <div style="text-align: center">
+            <h1>New Stock page</h1>
+        </div>
+    </div>
 </body>
 </html>
