แก้ไขdb and add route for testDB

--- a/flask/app/templates/category.html
+++ b/flask/app/templates/category.html
@@ -33,7 +33,7 @@
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script>
-    const categories = {{ categories | tojson }};
+    const categories =  categories | tojson ;
     console.log(categories);
     var admin;
     var current_admin=$("#current_admin").val();
