send category_data to category page

--- a/flask/app/templates/category.html
+++ b/flask/app/templates/category.html
@@ -10,8 +10,9 @@
 <body>
 	<div class="top-bar">
     	<div class="back">
-        	<a href="{{ url_for('stockmenu') }}"></a>
-        	<span class="material-icons">arrow_back</span> 
+        	<a href="{{ url_for('stockmenu') }}">
+                <span class="material-icons">arrow_back</span> 
+            </a>
     	</div>
     	<div class="category">
         	<span class="material-icons">list_alt</span>
