--- a/flask/app/templates/loginB.html
+++ b/flask/app/templates/loginB.html
@@ -3,29 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/loginB.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="../static/css/loginB.css">
     <title>Document Title</title>
 </head>
-<body class="center-screen">
-    <div class="center-text text">
-        <img src="../icon/stock_logo.png">
-        <p>
-            Why are you A? Presents
-        </p>
-        <p>
-            CS'Stock Managing System
-        </p>
-        <div>
-            <circle class="circle"></circle>
-            <circle class="circle"></circle>
-            <circle class="circle"></circle>
-            <circle class="circle"></circle>
-            <circle class="circle"></circle>
-            <circle class="circle"></circle>
+<body>
+    <div class="app-container">
+        <img src="../static/ico/stock_logo.png" alt="stock-logo" class="logo" />
+      
+        <p class="app-title">CS' Stock Managing System</p>
+        <div class="pin-container">
+            <form action="">
+                <input type="password" class="pin" maxlength="1" required>
+                <input type="password" class="pin" maxlength="1" required>
+                <input type="password" class="pin" maxlength="1" required>
+                <input type="password" class="pin" maxlength="1" required>
+                <input type="password" class="pin" maxlength="1" required>
+                <input type="password" class="pin" maxlength="1" required>
+            </form>
         </div>
-        <p class="border">
-            login with Face ID/Touch ID 
-        </p>
-    </div>
+      
+        <div class="login-button" onclick="faceLogin()">
+          <span class="material-icons icon">face</span>
+          <span>Login with Face ID</span>
+        </div>
+        
+        <div class="login-button" onclick="touchLogin()">
+          <span class="material-icons icon">fingerprint</span>
+          <span>Login with Touch ID</span>
+        </div>
+      </div>
 </body>
+<script>
+    const pins = document.querySelectorAll('.pin')
+    const form = document.querySelector('form')
+
+    pins.forEach((pin, index) => {
+        pin.dataset.id = index
+        
+        pin.addEventListener('keyup', () => {
+            if (pin.value.length == 1) {
+
+                if (pins[pins.length - 1].value.length == 1) form.submit() 
+
+                pins[parseInt(pin.dataset.id) + 1].focus()
+            }
+        })
+    })
+
+</script>
+  
 </html>
