--- a/flask/app/templates/home.html
+++ b/flask/app/templates/home.html
@@ -67,8 +67,9 @@
 
     <div class="bottom-nav">
         <div class="nav-item">
-            <a href="{{ url_for('stockmenu') }}"></a>
+            <a href="{{ url_for('stockmenu') }}">
             <img src="../static/ico/stock.png">
+            </a>
             <span>Stock</span>
         </div>
         <div id="qr-scan" class="nav-item">
