create admin list page and link from homepage with small fixes

--- a/flask/app/templates/home.html
+++ b/flask/app/templates/home.html
@@ -78,7 +78,9 @@
             <script src="../static/home.js"></script>
         </div>
         <div class="nav-item">
+            <a href="{{ url_for('adminlist') }}">
             <img src="../static/ico/person_add2.png">
+            </a>
             <span>Manage Admin</span>
         </div>
     </div>
