--- a/flask/app/templates/newitem.html
+++ b/flask/app/templates/newitem.html
@@ -10,7 +10,7 @@
     <div>
         <a href="{{ url_for('stockmenu') }}"> <img src="../static/ico/reply.png" class="reply-icon"></a>
         <div style="text-align: center">
-            <h1>New Stock page</h1>
+            <h1>New Item page</h1>
         </div>
     </div>
 </body>
