--- a/flask/app/templates/stockmenu.html
+++ b/flask/app/templates/stockmenu.html
@@ -18,8 +18,8 @@
                 <span>Category</span>
                 <img src="../static/ico/category.png" class="category-icon">
            	</button>
-           	<button type="button" class="nav-box" onclick="navigateTo('{{ url_for('newstock') }}')">
-                <span>New Stock</span>
+           	<button type="button" class="nav-box" onclick="navigateTo('{{ url_for('newitem') }}')">
+                <span>New Item</span>
             	<img src="../static/ico/addStock.png" class="addStock-icon">
         	</button>
 		</div>
