--- a/flask/app/templates/stockmenu.html
+++ b/flask/app/templates/stockmenu.html
@@ -13,7 +13,7 @@
             <span class="recName"></span>
             <h1>Stock Menu</h1>
         </div>
-        <div class="column card">
+        <div class="column">
            	<button type="button" class="nav-box" onclick="navigateTo('{{ url_for('category') }}')">
                 <span>Category</span>
                 <img src="../static/ico/category.png" class="category-icon">
