fix css add cart

--- a/flask/app/static/css/category.css
+++ b/flask/app/static/css/category.css
@@ -1,5 +1,5 @@
 body {
-  background: linear-gradient(#FAF3E0, white);
+  background: linear-gradient(#F9FAFB, #FFF);
   background-repeat: no-repeat;
   background-attachment: fixed;
   margin: 0;
