--- a/flask/app/static/css/home.css
+++ b/flask/app/static/css/home.css
@@ -1,9 +1,9 @@
 body {
-    background: linear-gradient(#FAF3E0, white);
+    background: linear-gradient(#F9FAFB, #FFF);
     background-repeat: no-repeat;
     background-attachment: fixed;
     margin: 0;
-    font-family: sans-serif;
+    font-family: 'Inter', sans-serif;
   }
   
   .top-bar {
