--- a/flask/app/static/css/loginB.css
+++ b/flask/app/static/css/loginB.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Inter', sans-serif;
-  background: linear-gradient(to bottom, #ffffff, #f6f1eb);
+  background: linear-gradient(#F9FAFB, #FFF);
   display: flex;
   justify-content: center;
   align-items: center;
