--- a/flask/app/static/css/newitem.css
+++ b/flask/app/static/css/newitem.css
@@ -1,19 +1,19 @@
 a { 
    color: #000000;
    text-decoration: none ;
-   font-family: "Archivo Narrow";
+   font-family: 'Inter', sans-serif;
 }
 img{
    margin-left: 10px;
 }
 .mobilescreen {
-  background: linear-gradient(180deg, #FFFFFFEB 2%, #FEFAC0 79%);
-  justify-content: center;
-  justify-items: center;
-   background-repeat: no-repeat;
-   background-position: center center;
-   background-attachment: fixed;
-   background-size: cover;
+    background: linear-gradient(#F9FAFB, #FFF);
+    justify-content: center;
+    justify-items: center;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
+    background-size: cover;
 }
 .reply-icon {
 	width: 52px;
