--- a/flask/app/static/css/stockmenu.css
+++ b/flask/app/static/css/stockmenu.css
@@ -1,74 +1,79 @@
 a { 
    color: #000000;
    text-decoration: none ;
-   font-family: "Archivo Narrow";
+   font-family: 'Inter', sans-serif;
 }
 img{
    margin-left: 10px;
 }
 .mobilescreen {
-  background: linear-gradient(180deg, #FFFFFFEB 2%, #FEFAC0 79%);
-  justify-content: center;
-  justify-items: center;
+   background: #F7F9FC;
+   justify-content: center;
+   justify-items: center;
    background-repeat: no-repeat;
    background-position: center center;
    background-attachment: fixed;
    background-size: cover;
 }
 .reply-icon {
-	width: 52px;
-	height: 52px;
-	fill: #000000;
+   position: relative;
+   left: 0;
+	font-size: 2rem;
+	color: #000;
 }
+
 .mainbox {
-   padding: 8px;
+   flex-direction: column;
+   padding: 16px;
    margin-top: 20px;
    width: 90%;
-   box-shadow: 0px 24px 30px #00000040;
-   background: radial-gradient(circle at 0% 0%, #FFFFFF 0%, #cf9241 100%);
+   background: #a084cc;
+   /* background: linear-gradient(#a084cc , rgb(222, 222, 222) ); */
+   box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.08);
    border-radius: 20px;
 }
 .row {
     display: flex;
     align-items: center;
     margin:0px;
+    padding: 20px;
+    font-weight: 550;
+    font-size: 2rem;
 }
 .column {
    justify-items: center;
    justify-content: center;
    height: auto;
 }
-.recName {
-    width: 4px;
-    height: 40px;
-    padding: 4px;
-    margin-right: 10px;
-    background: #000000;
-    border: 1px solid #000000;
-}
+
 .nav-box{
-   	width:75%;
-   	padding:  30px;
-   	justify-content: center;
-   	align-items: center;
-   	display: flex;
-   	margin:5% 0% 5% 0%;
-   	background: #FFFFFF;
-   	border-radius: 20px;
-   	border: none;
-   	font-weight: bold;
-   	font-size: 30px;
-   	position: relative;
+   width:75%;
+   padding:  30px;
+   justify-content: center;
+   align-items: center;
+   display: flex;
+   margin: 5% 0% 5% 0%;
+   background: #eee;
+   border-radius: 20px;
+   border: none;
+   font-weight: 500;
+   font-size: 30px;
+   position: relative;
 	cursor: pointer;
 	transition-duration: 0.5s;
 }
+
+.nav-box:hover{
+   background-color: #F3F4F6;
+}
+
 .category-icon {
-	width: 52px;
-	height: 52px;
+	width: 3rem;
+	height: 3rem;
 	fill: #000000;
 }
 .addStock-icon {
-	width: 52px;
-	height: 52px;
+	width: 3rem;
+	height: 3rem;
 	fill: #000000;
 }
