--- a/flask/app/templates/cart.html
+++ b/flask/app/templates/cart.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<<<<<<< HEAD
-    <link rel="stylesheet" href="../static/css/waiting.css">
+    <link rel="stylesheet" href="../static/css/cart.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
@@ -14,27 +13,21 @@
         <span class="material-icons">arrow_back_ios_new</span>
         </a>
 
-        <span class="text">Waiting list</span>
+        <span class="text">Cart</span>
     </div>
     
     <div class="bot-bar">
-        <div class="bot-text">
+        <div class="bot-container-total">
             <span>Total</span>
+            <span>qty</span>
         </div>
         
         <div class="bot-container">
-            <span>Disbursement</span>
-=======
-    <link rel="stylesheet" href="../static/css/stockmenu.css">
-</head>
-
-<body>
-    <div>
-        <a href="{{ url_for('stockmenu') }}"> <img src="../static/ico/reply.png" class="reply-icon"></a>
-        <div style="text-align: center">
-            <h1>New Stock page</h1>
->>>>>>> refs/remotes/origin/main
+            <button>Disbursement</button>
         </div>
     </div>
 </body>
+<script>
+
+</script>
 </html>
