fix some error from merge

--- a/flask/app/templates/category.html
+++ b/flask/app/templates/category.html
@@ -19,7 +19,7 @@
         	<span>Category</span>
     	</div>
         <div class="cart">
-            <a href="{{ url_for('waiting') }}">
+            <a href="{{ url_for('cart') }}">
                 <span class="material-icons">shopping_cart_checkout</span>
             </a>
     	</div>
