--- a/flask/app/templates/cart.html
+++ b/flask/app/templates/cart.html
@@ -15,6 +15,34 @@
 
         <span class="text">Cart</span>
     </div>
+
+    <div class="column">
+        <span>Hello</span>
+        <span>Hello</span>
+        <span>Hello</span>
+        <span>Hello</span>
+        <span>Hello</span>
+        <span>Hello</span>
+        <span>Hello</span>
+        <span>Hello</span>
+        <span>Hello</span>
+        <span>Hello</span>
+        <span>Hello</span>
+        <span>Hello</span>
+        <span>Hello</span>
+        <span>Hello</span>
+        <span>Hello</span>
+        <span>Hello</span>
+        <span>Hello</span>
+        <span>Hello</span>
+        <span>Hello</span>
+        <span>Hello</span>
+        <span>Hello</span>
+        <span>Hello</span>
+        <span>Hello</span>
+        <span>Hello</span>
+    </div>
+    
     
     <div class="bot-bar">
         <div class="bot-container-total">
