--- a/flask/app/templates/category.html
+++ b/flask/app/templates/category.html
@@ -20,7 +20,7 @@
     	</div>
         <div class="cart">
             <a href="{{ url_for('waiting') }}">
-                <span class="material-icons">shopping_cart_checkout</span>
+                <span class="material-icons">shopping_cart</span>
             </a>
     	</div>
 	</div>
