--- a/flask/app/static/css/cart.css
+++ b/flask/app/static/css/cart.css
@@ -3,7 +3,6 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     margin: 0;
-    height: 100%;
     font-family: 'Inter', sans-serif;
   }
 
@@ -18,6 +17,14 @@ body {
     font-size: 1.5rem;
     font-weight: 400;
     color: #111827;
+}
+
+.column {
+    display: flex;
+    flex-direction: column;
+    font-size: 3rem;
+    overflow-y: auto;       
+    height: calc(100vh - 160px);  
 }
 
 .bot-bar {
