--- a/flask/app/static/css/category.css
+++ b/flask/app/static/css/category.css
@@ -15,7 +15,8 @@ body {
   display: flex;
   justify-content: space-between;
   margin-top: 10px;
-  padding: 20px;
+  border-bottom: 2px solid #eee;
+  padding: 10px;
 }
 
 .back, .category, .cart{
@@ -33,7 +34,7 @@ body {
   padding: 10px;
   border-radius: 30px;
   background-color: white;
-  margin: 5px auto;
+  margin: 20px auto;
 }
 
 .search-input {
