--- a/flask/app/static/css/stockmenu.css
+++ b/flask/app/static/css/stockmenu.css
@@ -18,7 +18,6 @@ img{
 .reply-icon {
    position: relative;
    left: 0;
-	font-size: 2rem;
 	color: #000;
 }
 
@@ -37,7 +36,7 @@ img{
     align-items: center;
     margin:0px;
     padding: 20px;
-    font-weight: 550;
+    font-weight: 500;
     font-size: 2rem;
 }
 .column {
@@ -53,7 +52,7 @@ img{
    align-items: center;
    display: flex;
    margin: 5% 0% 5% 0%;
-   background: #eee;
+   background: #F5F7FA;
    border-radius: 20px;
    border: none;
    font-weight: 500;
