--- a/flask/app/templates/stockmenu.html
+++ b/flask/app/templates/stockmenu.html
@@ -11,7 +11,7 @@
     <div class="mainbox">
         <div class="reply-icon">
             <a href="{{ url_for('homepage') }}"> 
-                <span class="material-icons">arrow_back_ios_new</span> 
+                <span class="material-icons" style="font-size: 2rem;">arrow_back_ios_new</span> 
             </a> 
         </div>
     
