fix category stockmenu

--- a/flask/app/static/css/cart.css
+++ b/flask/app/static/css/cart.css
@@ -41,7 +41,7 @@ body {
     text-align: center;
     border-radius: 50px;
     background: #9174c0;
-    /* background: linear-gradient(90deg, #000, #333);  */
+    background: linear-gradient(90deg, #000, #333); 
     padding: 14px 0;
     margin: 8px 16px;
     box-shadow: 0 2px 6px rgba(0,0,0,0.2); 
