--- a/flask/app/templates/cart.html
+++ b/flask/app/templates/cart.html
@@ -16,7 +16,7 @@
         <span class="text">Cart</span>
     </div>
 
-    <div class="column">
+    <!-- <div class="column">
         <span>Hello</span>
         <span>Hello</span>
         <span>Hello</span>
@@ -42,7 +42,7 @@
         <span>Hello</span>
         <span>Hello</span>
     </div>
-    
+     -->
     
     <div class="bot-bar">
         <div class="bot-container-total">
