--- a/flask/app/templates/stockmenu.html
+++ b/flask/app/templates/stockmenu.html
@@ -11,7 +11,7 @@
     <div class="mainbox">
         <div class="reply-icon">
             <a href="{{ url_for('homepage') }}"> 
-                <span class="material-icons" style="font-size: 2rem;">arrow_back_ios_new</span> 
+                <span class="material-icons" style="font-size: 2rem; color: #FFF">arrow_back_ios_new</span> 
             </a> 
         </div>
     
@@ -21,7 +21,7 @@
         <div class="column">
            	<a type="button" class="nav-box" href="{{ url_for('category') }}">
                 <span>Category</span>
-                <img src="../static/ico/category.png" class="category-icon">
+                <img src="../static/ico/category.png" class="category-icon" >
             </a>
            	<a type="button" class="nav-box" href="{{ url_for('newitem') }}">
                 <span>New Item</span>
