--- a/flask/app/static/css/stockmenu.css
+++ b/flask/app/static/css/stockmenu.css
@@ -18,7 +18,7 @@ img{
 .reply-icon {
    position: relative;
    left: 0;
-	color: #000;
+	color: #FFF;
 }
 
 .mainbox {
@@ -26,7 +26,8 @@ img{
    padding: 16px;
    margin-top: 20px;
    width: 90%;
-   background: #a084cc;
+   /* background: #a084cc; */
+   background: linear-gradient(90deg, #000, #333); 
    /* background: linear-gradient(#a084cc , rgb(222, 222, 222) ); */
    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.08);
    border-radius: 20px;
@@ -38,6 +39,10 @@ img{
     padding: 20px;
     font-weight: 500;
     font-size: 2rem;
+}
+
+.row span{
+   color: #FFF;
 }
 .column {
    justify-items: center;
