--- a/flask/app/static/css/newitem.css
+++ b/flask/app/static/css/newitem.css
@@ -16,22 +16,25 @@ img{
     background-size: cover;
 }
 .reply-icon {
-	width: 52px;
-	height: 52px;
-	fill: #000000;
+    position: relative;
+    left: 0;
+	margin-top: 10px;
 }
 .mainbox {
    padding: 8px;
    margin-top: 20px;
    width: 90%;
    box-shadow: 0px 24px 30px #00000040;
-   background: radial-gradient(circle at 0% 0%, #FFFFFF 0%, #cf9241 100%);
+   /* background: linear-gradient(90deg, #000, #333); */
+   background: radial-gradient(circle at 0% 0%, #333 0%, #111827 100%);
+   /* background: radial-gradient(circle at 0% 0%, #FFFFFF 0%, #cf9241 100%); */
    border-radius: 20px;
 }
 .row {
     display: flex;
     align-items: center;
     width: auto;
+    padding: 14px 20px;
 }
 .column {
     display: flex;
@@ -40,14 +43,12 @@ img{
     height: auto;
     gap: 10%;
 }
-.recName {
-    width: 4px;
-    height: 40px;
-    padding: 4px;
-    margin-right: 10px;
-    background: #000000;
-    border: 1px solid #000000;
+.row span{
+    color: #FFF;
+    font-size: 2rem;
+    font-weight: 500;
 }
+
 .input-box {
 	background: #FFFFFF;
 	font-weight: 400;
@@ -56,7 +57,7 @@ img{
    	justify-content: center;
    	align-items: center;
    	display: flex;
-   	border-radius: 20px;
+   	border-radius: 10px;
    	border: none;
    	font-size: 3vh;
    	position: relative;
@@ -82,7 +83,7 @@ img{
 .btm-btn {
     width: 100%;
     margin: 10% 7.5% 5% 7.5%;
-	background: #FFFFFF;
+	background: #E5E7EB;
 	font-weight: 400;
 	text-align: left;
     padding-top: 30px;
@@ -90,16 +91,22 @@ img{
    	justify-content: center;
    	align-items: center;
    	display: flex;
-   	border-radius: 20vh;
+   	border-radius: 35px;
    	border: none;
    	font-size: 3vh;
    	position: relative;
 	cursor: pointer;
 }
 .confirm-button {
-    background-color: #00441B;
+    background-color: #0A5C2A;
     color: white;
+    cursor: none;
 }
+
+.confirm-button:hover{
+    background-color: #00441B;
+}
+
 .default-icon {
 	width: 40%;
 	height: 40%;
