--- a/flask/app/static/css/stockmenu.css
+++ b/flask/app/static/css/stockmenu.css
@@ -7,7 +7,7 @@ img{
    margin-left: 10px;
 }
 .mobilescreen {
-   background: #F7F9FC;
+   background: #F9FAFB;
    justify-content: center;
    justify-items: center;
    background-repeat: no-repeat;
