--- a/flask/app/templates/cart.html
+++ b/flask/app/templates/cart.html
@@ -9,7 +9,7 @@
 
 <body>
     <div class="top-bar">
-        <a href="{{ url_for('stockmenu') }}"> 
+        <a href="{{ url_for('category') }}"> 
         <span class="material-icons">arrow_back_ios_new</span>
         </a>
 
