--- a/flask/app/templates/home.html
+++ b/flask/app/templates/home.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="../static/css/home.css">
     <title>Home page</title>
 </head>
@@ -10,7 +11,9 @@
     <div class="top-bar">
         <div class="profile-wrapper">
             <div class="profile-circle">
-               <img src="../static/ico/profile.png" class="profile"> 
+                <a href="{{ url_for(setting) }}">
+                    <img src="../static/ico/profile.png" class="profile"> 
+                </a>
             </div>
             <div class="profile-text">
                 <span>Welcome!<br></span>
