--- a/flask/app/static/css/setting.css
+++ b/flask/app/static/css/setting.css
@@ -12,6 +12,10 @@ body{
     padding: 14px 20px;
 }
 
+.top-bar{
+    color: #000;
+}
+
 .profile{
     padding: 20px 20px;
     text-align: center;
@@ -19,4 +23,13 @@ body{
 
 .profile span{
     font-size: 5rem;
+}
+
+.item{
+    padding: 14px 20px;
+}
+
+.item span{
+    font-size: 2rem;
+    font-weight: 300;
 }
