--- a/flask/app/templates/home.html
+++ b/flask/app/templates/home.html
@@ -11,7 +11,7 @@
     <div class="top-bar">
         <div class="profile-wrapper">
             <div class="profile-circle">
-                <a href="{{ url_for(setting) }}">
+                <a href="{{ url_for('setting') }}">
                     <img src="../static/ico/profile.png" class="profile"> 
                 </a>
             </div>
